<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:hint="@string/enter"
            android:padding="10dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="200dp" />


        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:gravity="start"
            android:hint="@string/enter_des"
            android:inputType="textCapSentences|textLongMessage"
            android:minHeight="120dp"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/upload"
            android:textColor="#fff"
            app:cornerRadius="8dp" />
    </LinearLayout>
</ScrollView>