<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/uPicture_imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_face_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pTime_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="33 min" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/more" />

        </LinearLayout>

        <TextView
            android:id="@+id/pTitle_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pDescription_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/desc"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/pImage_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/likes_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1.2 likes"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/like_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/like"
                android:paddingStart="5dp"
                android:text="@string/like"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/comment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/comment"
                android:paddingStart="5dp"
                android:text="@string/comment" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/share_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/share"
                android:paddingStart="5dp"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>