<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".ChatActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        style="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark">


        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/profile_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/face_white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:c_background_color="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_person_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hisName"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chat_layout"
        android:layout_below="@id/toolBar" />

    <LinearLayout
        android:id="@+id/chat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/attach_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/attach" />

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/start"
            android:inputType="textCapSentences"
            android:padding="15dp" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/send" />
    </LinearLayout>
</RelativeLayout>